# phiper-db

./: .gitignore  404.html  CONTRIBUTING.md  LICENSE  NEWS.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  pr-checks.yml
changelog/: index.html
contributing/: index.html
data-preparation/: index.html
docs/: changelog.md  cli.md  data-preparation.md  index.md  install.md  quickstart.md  schema.md
docs/reference/: connection.md  fetch.md  files.md  import.md  index.md  metadata.md  projects.md  queries.md  samples.md  subjects.md  visits.md  workflows.md
docs/stylesheets/: extra.css
install/: index.html
quickstart/: index.html
reference/: index.html
reference/connection/: index.html
reference/fetch/: index.html
reference/files/: index.html
reference/import/: index.html
reference/metadata/: index.html
reference/projects/: index.html
reference/queries/: index.html
reference/samples/: index.html
reference/subjects/: index.html
reference/visits/: index.html
reference/workflows/: index.html
schema/: 001_initial.sql  002_controls_support.sql  003_cross_project_samples.sql  README.md  index.html
scripts/: add_controls.py  bulk_import.py  fix_controls_projects.py  import_project.py  prepare_migration.py  probe_autofetch.py  probe_quickstart.py
search/: search_index.json
seed/: load_fake_data.py
src/dbmaria_utils/: __init__.py  connection.py  fetch.py  files.py  metadata.py  projects.py  queries.py  samples.py  subjects.py  visits.py  workflows.py
src/dbmaria_utils/_import/: __init__.py  loader.py  runner.py  schema.py
src/noxdb/: connection.py  queries.py  samples.py  subjects.py  workflows.py
src/noxdb/_import/: runner.py  schema.py
stylesheets/: extra.css
testing/: index.html
tests/: _helpers.py  conftest.py  test_fetch.py  test_files.py  test_import_project.py  test_metadata.py  test_plate_id.py  test_projects.py  test_queries.py  test_samples.py  test_ssh_tunnel.py  test_subjects.py  test_visits.py  test_workflows.py
users/: revoke_readwrite.sql
