[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phiper-db"
version = "0.2.0"
description = "Schema, migrations, and Python tooling for the lab's MariaDB metadata database."
requires-python = ">=3.10"
authors = [
    { name = "Gabriel Innocenti" },
    { name = "Mateusz F. Kolek" },
]
dependencies = [
    "mariadb>=1.1.10",
    "sshtunnel>=0.4.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/dbmaria_utils"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
